# nightscout-mcp

./: .gitignore  README.md  pyproject.toml
src/nightscout_mcp/: server.py
